docs(interp): mark poly-sum-gauss done; add vectorize-pure-loop to BACKLOG; update pureCallSum* baselines